styles/main.css
a:hover {
    text-decoration: underline;
}

#nav-right {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    padding-top: 16px;
    min-width: 200px;
}


#profile {
    border-radius: 50%;
    display: block;
    margin: -1px;
    overflow: hidden;
    position: relative;
    height: 32px;
    width: 32px;
    z-index: 0;
    margin-right: 30px;
}

#profile:hover {
    box-shadow: 0 0 8px rgb(0 0 0 / 30%);
}

#app-launcher {
    opacity: .55;
    padding-right: 15px;
}

#app-launcher:hover {
    opacity: .85;
}

.right-menu {
    color: rgba(0, 0, 0, 0.87);
    text-decoration: none;
    line-height: 24px;
    font-size: 13px;
    font-family: arial, sans-serif;
    padding-right: 15px;
}

#nav-left {
    display: flex;
    float: left;
    margin: 24px 0 0 10px;
    
}

.left-menu {
    padding-left: 15px;
    color: #000;
    opacity: .75;
    text-decoration: none;
    font-size: 13px;
    font-family: arial, sans-serif;
}

#logo {
    display: flex;
    justify-content: center;
    margin-top: 84px;
    margin-bottom: 20px;
    padding-top: 109px;
}

#searchbox {
    width: 584px;
    background: #fff;
    display: flex;
    border: 1px solid #dfe1e5;
    box-shadow: none;
    border-radius: 24px;
    height: 44px;
    margin: 0 auto;
}

#searchbox:hover {
    background-color: #fff;
    box-shadow: 0 1px 6px rgba(32,33,36,.28);
    border-color: rgba(223,225,229,0);
}

#search-icon {
    height: 20px;
    width: 20px;
    padding-top: 12px;
    padding-left: 12px;
}

#search-input {
    width: 88%;
    color: rgba(0, 0, 0, 0.87);
    font-size: 16px;
    font-family: arial, sans-serif;
    border: 0;
    outline: none;
    padding-left: 10px;
}

#mic {
    height: 24px;
    width: 24px;
    padding-top: 10px;
    padding-right: 10px;
}

#buttons {
    display: flex;
    justify-content: center;
    padding-top: 18px;
}

.button-search, .button-lucky {
    background-color: #f8f9fa;
    border: 1px solid #f8f9fa;
    border-radius: 4px;
    color: #3c4043;
    font-family: arial,sans-serif;
    font-size: 14px;
    margin: 11px 4px;
    padding: 0 16px;
    line-height: 27px;
    height: 36px;
    min-width: 54px;
    text-align: center;
    cursor: pointer;
    user-select: none;
}

.button-search:hover, .button-lucky:hover {
    box-shadow: 0 1px 1px rgba(0,0,0,.1);
    background-color: #f8f9fa;
    border: 1px solid #dadce0;
    color: #202124;
}

#footer-container {
    display: flex;
    position: fixed;
    background: #f2f2f2;
    line-height: 40px;
    border-top: 1px solid #dadce0;
    bottom: 0px;
    width: 100%;
    justify-content: space-between;
    min-width: 400px;
}

#footer-left {
    display: flex;
}

.footer-links {
    color: #70757a;
    padding-left: 27px;
    text-decoration: none;
    font-size: 14px;
    font-family: arial, sans-serif;
}

#footer-center {
    display: flex;
    position: fixed;
    bottom: 0;
    width: 100%;
    justify-content: center;
    line-height: 40px;
}

.carbon-neutral {
    color: #70757a;
    text-decoration: none;
    font-size: 14px;
    font-family: arial, sans-serif;
}

#footer-right {
    display: flex;
    margin-right: 30px;
}

#leaf {
    display: flex;
    padding-top: 10px;
    width: 12px;
    height: 16px;
    padding-right: 5px;
}

